# churn-monitor

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.jsx  main.jsx  styles.css
src/churn_monitor/: __init__.py  app.py  cli.py  git_diff.py  models.py
src/churn_monitor/client/: index.html
src/churn_monitor/client/assets/: index-6tY5y9a8.js  index-BcCIQPj1.js  index-BoPFMwbr.css  index-C57p3yGy.js  index-CIDo9rWa.js  index-Cpl8C3YN.js  index-CywJ2NrC.js  index-DFnoBhZP.js  index-fZ5wlBNU.js  index-iK0Nm7vW.js  index-tlqp3HNQ.js
src/churn_monitor/static/: app.css  app.js  index.html
src/diff_treemap/: __init__.py  app.py  cli.py  git_diff.py  models.py
src/diff_treemap/static/: app.css  app.js  index.html
tests/: test_git_diff.py
